# inventory_project

./: .env.example  .env.postgres.example  .gitignore  Dockerfile  Makefile  docker-compose.yaml  main.py  pyproject.toml  readme.md  todo.md
app/auth/: auth_facade.py
app/auth/communication/: auth_api.py
app/auth/dependencies/: auth.py
app/auth/dto/: token.py  user.py
app/auth/services/: auth_service.py
app/item/: dependencies.py  exceptions.py
app/item/communication/: item_api.py  schema.py
app/item/dto/: item.py
app/item/persistence/: item_repository.py  models.py
app/item/services/: item_service.py
app/location/persistence/: models.py
app/movement/: dependencies.py
app/movement/communication/: movement_api.py  schema.py
app/movement/dto/: movement.py
app/namespace/: dependencies.py  exceptions.py
app/user/: user_facade.py
core/: db.py  settings.py
framework/dependencies/: session.py
framework/dto/: mixin.py
framework/exceptions/: __init__.py
framework/persistence/: base_repository.py  mixins.py  session.py
migrations/: env.py
migrations/versions/: 2022_12_14_2037-6b30180c8b04_add_namespace.py  2022_12_14_2038-699b3e4cfb7a_add_owener_role.py  2022_12_17_1402-4a5b314e888e_add_item_and_movement.py  2022_12_22_2015-b8184ebd2ae4_namespace_constrain.py  2022_12_23_1021-f8e7e8106b57_add_roles.py  2022_12_23_1035-a07367093c2e_add_unique_to_role_slug.py  2022_12_23_1133-493173b35ec8_add_funciton.py  2022_12_24_1029-a97eb032b85f_weight_control.py  959facc79e22_add_user.py
sql/: create_tables.sql  fill_test_data.sql
(+17 files in other folders)
